[package]
authors = ["Tim Neumann <mail@timnn.me>"]
name = "pcp"
version = "0.1.0"

[dependencies]
clap = "1.5.2"
libc = "0.2.2"
num_cpus = "0.2.7"
quickersort = "1.0.0"
scoped_threadpool = "0.1.6"
tabwriter = "0.1.24"
time = "0.1.34"

[dependencies.ctrlc]
default-features = false
features = ["nightly"]
version = "1.0.0"

[profile]

[profile.release]
debug = true
lto = true
